<resources>
    <string name="app_name">MenuNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_games">Games</string>
    <string name="title_movie">Movie</string>
    <string name="title_news">News</string>
    <string name="title_setting">Settings</string>
    <string name="title_share">Share</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="title_logout">Logout</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="name">Coding is best</string>
    <string name="name_description">Crack the code here</string>
    <string name="content_description">This is content description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_game_fragment">Hello Game Fragment</string>
    <string name="hello_movie_fragment">Hello Movie Fragment</string>
    <string name="hello_news_fragment">Hello News Fragments</string>
</resources>