<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/title_home"
            android:checked="true"
            />

        <item
            android:id="@+id/games"
            android:icon="@drawable/games"
            android:title="@string/title_games" />

        <item
            android:id="@+id/movie"
            android:icon="@drawable/movie"
            android:title="@string/title_movie" />

        <item
            android:id="@+id/news"
            android:icon="@drawable/news"
            android:title="@string/title_news" />

        <item
            android:id="@+id/settings"
            android:icon="@drawable/settings"
            android:title="@string/title_setting" />

        <item
            android:id="@+id/share"
            android:icon="@drawable/share"
            android:title="@string/title_share" />

        <item
            android:id="@+id/privacy_policy"
            android:icon="@drawable/privacy_policy"
            android:title="@string/title_privacy_policy" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/title_logout" />


    </group>
</menu>